[package]
name = "dev-flow-browser"
version = "0.1.0"
description = "A keyboard-first personal development browser."
authors = ["You"]
edition = "2021"

[lib]
name = "dev_flow_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
